apps/qbittorrent/envs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
spec:
  rules:
    - host: 'prod.rizexor.com'
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  qbittorrent-svc
              port:
                number: 80
  tls:
  - hosts:
    - 'prod.rizexor.com'
    secretName: prod-rizexor-com-tls
